--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <tr>
 <td width=18% align=center>
 <a href="https://www.onet.pl/" target="strony">Onet</a><br><br>
-<a href="https://lowcygier.pl/" target="strony">£owcy gier</a><br><br>
+<a href="https://lowcygier.pl/" target="strony">Å‚owcy gier</a><br><br>
 <a href="https://pl.wikipedia.org/" target="strony">Wikipedia</a><br><br>
-<a href="https://lubimyczytac.pl/" target="strony">Lubimy Czytaæ</a><br><br>
+<a href="https://lubimyczytac.pl/" target="strony">Lubimy CzytaÄ‡</a><br><br>
 <a href="https://www.google.com/" target="strony">Google</a><br><br>
 <a href="http://zse.edu.gdansk.pl/pl" target="strony">Strona ZSE</a>
 </td>
@@ -18,7 +18,7 @@
 <iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
 <td width=18% align=center>
-<a href="start.html" target="strony">Pocz±tek</a><br>
+<a href="start.html" target="strony">PoczÄ…tek</a><br>
 <A href="poczta_kolberg.html" target="strony">poczta </A><br>
 <A href="plik_kolberg.html" target="strony">plik </A><br>
 <A href="tabela_kolberg.html" target="strony">tabela </A><br>
